jwt eklendi ve düzenlemeler yapıldı.

--- a/src/CleanArchitecture.WebAPI/appsettings.json
+++ b/src/CleanArchitecture.WebAPI/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "Server=IMEHMETC;Database=CleanArchitectureDb;User Id=sa;Password=123;TrustServerCertificate=True;"
+    "SqlServer": "Data Source=IMEHMETC;Initial Catalog=CleanArchitectureDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "Jwt": {
+    "Issuer": "Mehmet Can Şimşek",
+    "Audience": "Mehmet Can Şimşek",
+    "SecretKey": "939f1de7-05d0-4dbe-9832-a69358e5ff50,bd231e2a-54ce-4754-8fca-415b9b3dc345-493106a7-0bbf-4261-b100-792b37452d8e,c9b805e1-fdcb-48b8-b47e-205238e160c0-577e2a0a-b6b4-4e8f-9cac-d82c930ad247"
   }
 }
